--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-router": "^0.2.1",
+    "react-native-router-flux": "^4.2.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-addons": "^0.1.18",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
