--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,12 +4,19 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+
+    
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+   <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyCL3XG0JxDpUSrzjyAZBpQOzv-TsMGFEME"/>
+  
+   <uses-library android:name="org.apache.http.legacy" android:required="false"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -25,3 +32,4 @@
     </application>
 
 </manifest>
+     
