--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,9 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
+         
+        playServicesVersion = "17.0.0" // or find latest version
+    
     }
     repositories {
         google()
@@ -13,6 +16,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.5.2")
+        // implementation project(':react-native-maps')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
