--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-base": "2.13.12",
     "react": "16.11.0",
     "react-addons-update": "^15.6.2",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-router": "^0.2.1",
     "react-native-router-flux": "^4.2.0",
